Fix main background not showing (2)

--- a/css/_index.scss
+++ b/css/_index.scss
@@ -67,7 +67,7 @@
     display: flex;
     align-content: center;
     
-    background-image: url("../../img/bg-img.jpg");
+    background-image: url("../img/bg-img.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     &__image{
